K8S/movies-np.yml
apiVersion: v1
kind: Service
metadata:
  name: movies-nodeport-service
spec:
  type: NodePort
  selector:
    app: moviesservice
  ports:
    - name: moviesservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tv-nodeport-service
spec:
  type: NodePort
  selector:
    app: tvservice
  ports:
    - name: tvservice
      protocol: TCP
      port: 80
      targetPort: 80
