K8S/tv-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tv-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvservice
  template:
    metadata:
      labels:
        app: tvservice
    spec:
      containers:
        - name: tvservice
          image: prashantdarade1697/tvservice
---
apiVersion: v1
kind: Service
metadata: 
  name: tv-clusterip
spec:
  type: ClusterIP
  selector:
    app: tvservice
  ports:
   - name: tvservice
     protocol: TCP
     port: 80
     targetPort: 80
