K8S/ingress-serv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
         - path: /api/movie
           pathType: Prefix
           backend:
            service:
              name: movies-clusterip
              port:
                number: 80
         - path: /api/tv
           pathType: Prefix
           backend:
             service:
               name: tv-clusterip
               port:
                 number: 80
